# TravelRag

./: .gitignore  README.md  config.py  data_collector.py  install_windows.bat  pyproject.toml  rag_engine.py  requirements.txt  requirements_alternative.txt  run_app.bat  setup.py  simple_vector_store.py  streamlit_app.py  test.py  text_processor.py  vector_store.py
scripts/: setup.py
src/: __init__.py  config.py
src/core/: __init__.py  rag_engine.py  text_processor.py  vector_store.py
